force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <label>Voucher</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Voucher Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>