force-app/main/default/objects/Voucher__c/fields/Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Code_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Code Number</label>
    <type>AutoNumber</type>
</CustomField>