force-app/main/default/objects/Voucher__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <externalId>true</externalId>
    <label>IMEI</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>