force-app/main/default/objects/Voucher__c/fields/Is_Applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Applied__c</fullName>
    <formula>ISPICKVAL( Voucher_Status__c , &quot;Redeemed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Applied</label>
    <type>Checkbox</type>
</CustomField>