force-app/main/default/objects/Voucher__c/fields/Is_PromoItem__c.field-meta.xml
<CustomField>
    <fullName>Is_PromoItem__c</fullName>
    <formula>!ISBLANK( Campaign__r.Promotion_Item__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PromoItem</label>
    <type>Checkbox</type>
</CustomField>