force-app/main/default/objects/Voucher__c/fields/MKT_Type__c.field-meta.xml
<CustomField>
    <fullName>MKT_Type__c</fullName>
    <formula>IF(ISPICKVAL(Campaign__r.Type, &quot;Event&quot;) ,  &apos;Community&apos; ,

    IF(ISPICKVAL(Campaign__r.Type, &quot;&quot;),  &apos;None&apos;,
       &apos;BTL&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKT Type</label>
    <type>Text</type>
</CustomField>