force-app/main/default/objects/Voucher__c/fields/Order_WebCommercal__c.field-meta.xml
<CustomField>
    <fullName>Order_WebCommercal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order WebCommercal</label>
    <referenceTo>Order_WebCommercal__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>