force-app/main/default/objects/Voucher__c/fields/Promotion_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Item</label>
    <referenceTo>Promotion_Item__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>