force-app/main/default/objects/Voucher__c/fields/Redeem_Date__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Date__c</fullName>
    <label>Redeem Date</label>
    <type>DateTime</type>
</CustomField>