force-app/main/default/objects/Voucher__c/fields/remind_voucher__c.field-meta.xml
<CustomField>
    <fullName>remind_voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>remind voucher</label>
    <type>Checkbox</type>
</CustomField>