force-app/main/default/objects/Voucher__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Monthly_Task__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>