force-app/main/default/objects/Voucher__c/fields/Voucher_Note__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Note__c</fullName>
    <label>Voucher Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>