force-app/main/default/objects/Voucher__c/fields/Voucher_Status__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Status__c</fullName>
    <label>Voucher Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Redeemed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>