force-app/main/default/objects/Voucher__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <formula>TEXT(Campaign__r.Voucher_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Type</label>
    <type>Text</type>
</CustomField>