force-app/main/default/objects/Voucher__c/fields/Voucher_Type_Order__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type_Order__c</fullName>
    <label>Voucher Type Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>