force-app/main/default/objects/Voucher__c/recordTypes/Voucher_Cash.recordType-meta.xml
<RecordType>
    <fullName>Voucher_Cash</fullName>
    <active>true</active>
    <label>Voucher Cash</label>
</RecordType>