force-app/main/default/objects/Voucher__c/recordTypes/Voucher_Gift.recordType-meta.xml
<RecordType>
    <fullName>Voucher_Gift</fullName>
    <active>true</active>
    <label>Voucher Gift</label>
</RecordType>