force-app/main/default/objects/Voucher__c/recordTypes/Voucher_New_Bike.recordType-meta.xml
<RecordType>
    <fullName>Voucher_New_Bike</fullName>
    <active>true</active>
    <label>Voucher New Bike</label>
</RecordType>